Fix overflow issue caused by aos

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -1,6 +1,7 @@
 // Bootstrap Grid
 @import "~bootstrap/scss/bootstrap-grid.scss";
 @import "~/assets/styles/helping-classes.scss";
+@import "~/assets/fonts/fonts.scss";
 
 * {
   margin: 0;
@@ -40,7 +41,8 @@ h2 {
 h3 {
   font-size: $font-size-h3;
 }
-p {
+p,
+b {
   font-size: $font-size-p;
 }
 
@@ -60,6 +62,15 @@ main {
 }
 
 @media only screen and (max-width: $media-query-mobile) {
+  html,
+  body {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    width: 100%;
+  }
+
   main {
     padding-top: 5.2rem;
   }
